--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@mui/icons-material": "^5.15.12",
+    "@mui/icons-material": "^5.15.13",
     "@mui/joy": "^5.0.0-beta.30",
-    "@mui/material": "^5.15.12",
+    "@mui/lab": "^5.0.0-alpha.168",
+    "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-charts": "^6.19.5",
+    "@mui/x-data-grid": "^6.19.6",
+    "@types/react-swipeable-views": "^0.13.5",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
