--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,19 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@mantine/carousel": "^7.7.1",
+    "@mantine/charts": "^7.7.1",
+    "@mantine/code-highlight": "^7.7.1",
+    "@mantine/core": "^7.7.1",
+    "@mantine/dates": "^7.7.1",
+    "@mantine/dropzone": "^7.7.1",
+    "@mantine/form": "^7.7.1",
+    "@mantine/hooks": "^7.7.1",
+    "@mantine/modals": "^7.7.1",
+    "@mantine/notifications": "^7.7.1",
+    "@mantine/nprogress": "^7.7.1",
+    "@mantine/spotlight": "^7.7.1",
+    "@mantine/tiptap": "^7.7.1",
     "@mui/icons-material": "^5.15.13",
     "@mui/joy": "^5.0.0-beta.30",
     "@mui/lab": "^5.0.0-alpha.168",
@@ -21,13 +34,21 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-charts": "^6.19.5",
     "@mui/x-data-grid": "^6.19.6",
+    "@tabler/icons-react": "^3.1.0",
+    "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "@types/react-swipeable-views": "^0.13.5",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
+    "embla-carousel-react": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-fontawesome": "^1.7.1",
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
