--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,67 @@
-Django==5.0.2
-djangorestframework==3.14.0
-views==0.3
+# Django==5.0.2
+# djangorestframework==3.14.0
+
+# scikit-learn==1.4.2
+asgiref==3.8.1
+astropy==6.0.1
+astropy-iers-data==0.2024.4.22.0.29.50
+astroquery==0.4.7
+autograd==1.6.2
+backports.tarfile==1.1.1
+beautifulsoup4==4.12.3
+bokeh==3.4.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
+Django==5.0.4
+django-cors-headers==4.3.1
+djangorestframework==3.15.1
+fbpca==1.0
+fonttools==4.51.0
+future==1.0.0
+html5lib==1.1
+idna==3.7
+importlib_metadata==7.1.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+Jinja2==3.1.3
+joblib==1.4.0
+keyring==25.1.0
+kiwisolver==1.4.5
+lightkurve==2.4.2
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+memoization==0.4.0
+more-itertools==10.2.0
+numpy==1.26.4
+oktopus==0.1.2
+packaging==24.0
+pandas==2.2.2
+patsy==0.5.6
+pillow==10.3.0
+pyerfa==2.0.1.4
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pyvo==1.5.1
+pywin32-ctypes==0.2.2
+PyYAML==6.0.1
+requests==2.31.0
+scikit-learn==1.4.2
+scipy==1.13.0
+six==1.16.0
+soupsieve==2.5
+sqlparse==0.5.0
+threadpoolctl==3.4.0
+tornado==6.4
+tqdm==4.66.2
+typing_extensions==4.11.0
+tzdata==2024.1
+uncertainties==3.1.7
+urllib3==2.2.1
+webencodings==0.5.1
+xyzservices==2024.4.0
+zipp==3.18.1
